resources/screen-common.less
html{
    background: #1A1A1A;
}
 #mw-content, #mw-site-navigation .sidebar-chunk, .mw-prefs-buttons {
		background: #000;
}
.mw-changeslist-legend {
    background-color: #ffffff;
}
html:not(.cosmos-lightmode) .oo-ui-tabOptionWidget {
    color:#fff;
}
html:not(.cosmos-lightmode) .oo-ui-tabSelectWidget-framed {
    background-color: #000;
}
html:not(.cosmos-lightmode) .oo-ui-tabSelectWidget-framed .oo-ui-tabOptionWidget.oo-ui-widget-enabled:hover{
    background-color:rgba(255,255,255,0.8);
}
.oo-ui-buttonElement-framed.oo-ui-widget-disabled > .oo-ui-buttonElement-button {
    background-color: #c8ccd1;
    color: #666;
    border-color: #c8ccd1;
}
 .sidebar-chunk {
    border: 0;
}
body .oo-ui-buttonElement-framed:not(.oo-ui-flaggedElement-primary):not(.oo-ui-buttonElement-active) > .oo-ui-buttonElement-button {
    color: #000;
}
#mw-site-navigation .sidebar-chunk{
    padding:1.5em;
}
#mw-indicator-mw-helplink a {
    background-image: none;
    padding-left: 0;
}
body a, body a:hover, body a:focus {
    text-decoration: none;
}
#mw-content{
    border: 0;
}
#cosmos-search-form {
	width: 100%;
	display: flex;
}
#cosmos-banner-search {
	width: 100%;
	display: flex;
}
#cosmos-actionsList-list {
	z-index: 100;
	background-color: #f1f1f1;
	min-width: 160px;
	overflow: auto;
	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
	z-index: 1;
	margin: 0;
	a {
		color: black;
		padding: 12px 16px;
		text-decoration: none;
		display: block;
		&:hover {
			background-color: #ddd;
		}
	}
}
.cosmos-dropdown-list {
	display: none;
	position: absolute;
	right: 0;
	background-color: #eee;
	min-width: 200px;
	margin: 0;
	padding: 10px;
	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.3);
	z-index: 999;
	background-color: #1D1D1D;
	display: none;
	position: absolute;
	right: 0;
	background-color: #eee;
	min-width: 200px;
	margin: 0;
	padding: 10px;
	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.3);
	z-index: 999;
	>li {
		margin: 0;
		padding: 0;
		list-style: none;
		&:not(:last-child) {
			border-bottom: 1px solid #999;
		}
		>* {
			&:only-child {
				color: #000;
				padding: 5px 5px 5px 5px;
				text-decoration: none;
				display: block;
			}
		}
		>a {
			&:only-child {
				padding: 10px 10px 10px 15px;
				&:hover {
					background-color: #ddd;
				}
			}
		}
	}
}
#mw-content {
    padding:0 2em 0;
}
body > #mw-content-container {
	margin-top: 8%;
}
#searchform {
	width: 100%;
	display: flex;
}
#searchInput {
	width: 100%;
	font-size: 20px;
	border: none;
	border-bottom: 2px solid rgba(255, 255, 255, 0.5);
	background: transparent;
	background-color: transparent;
	color: white;
	padding: 0;
	margin: 10px 0;
	border-radius: 0;
	outline: none;
	-webkit-appearance: none;
	&:not(:placeholder-shown) {
		border-bottom: 2px solid white;
	}
}
#cosmos-search-buttonContainer {
	position: relative;
	margin-left: 5px;
	&:hover {
		>#cosmos-search-buttonIcon {
			stroke: #ffffff;
		}
	}
}
.cosmos-search-button {
	position: absolute;
	top: 0;
	left: 0;
	height: 100%;
	width: 100%;
	color: transparent;
	background: transparent;
	border: none;
	margin: 0;
}
#cosmos-banner-userOptions {
	display: flex;
	float: right;
	padding: 0 15px;
}
#cosmos-notifications-list {
	min-width: 350px;
}
#cosmos-messages-list {
	min-width: 350px;
}
.articleProposals {
    width: 100%;
    list-style:none;
    padding: 0;
    margin: 0.3em 0 0 1.6em;
}
.articleProposals li {
    float: left;
    width: 50%;
}
.sidebar-chunk{
   background:#000000;
   color:#fff;
}
#cosmos-userButton-avatar {
	margin-right: 15px;
	>img {
		width: 30px;
		height: 30px;
		border: 2px solid #bbbbbb;
		border-radius: 16px;
	}
}
#cosmos-userButton-label {
	display: inline-block;
	height: 25px;
	font-size: 20px;
	color: #bbbbbb;
	margin: 5px 0;
	padding: 5px 0;
	cursor: default;
	white-space: nowrap;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}
#cosmos-userOptions-personalTools {
	&:hover {
		#cosmos-userButton-label {
			color: #ffffff;
		}
		#cosmos-userButton-avatar {
			>img {
				border-color: #ffffff;
			}
		}
	}
}
.cosmos-button-secondary {
	border: 1px solid #333;
	color: #fff;
	stroke: #fff;
	stroke-width: 2px;
	&:hover {
		border: 1px solid #777;
		color: #777;
		stroke: #777;
		transition: 0.4s;
	}
}
.cosmos-dropdown {
	&:hover {
		>.cosmos-button-secondary {
			border: 1px solid #777;
			color: #777;
			stroke: #777;
			transition: 0.4s;
		}
		>.cosmos-dropdown-list {
			display: block;
		}
		.cosmos-dropdown-icon {
			transform: rotate(180deg);
			transition: 0.4s;
		}
	}
	position: relative;
	position: relative;
	.cosmos-dropdown-icon {
	}
}
.cosmos-button-action {
	height: 28px;
	margin: 15px 0 15px 0;
	height: 28px;
	margin: 15px 0 15px 0;
	>span {
		margin: auto 20px;
	}
}
.cosmos-button-text {
	margin: auto;
	text-decoration: none;
}
.cosmos-bannerOption {
	display: inline-block;
	&:hover {
		>.cosmos-bannerOption-button {
			display: inline-flex;
			align-items: center;
			justify-items: center;
			stroke: #bbbbbb;
			stroke-width: 2px;
			height: 45px;
			margin-top: 0;
			margin-bottom: 0;
			transition: 0.4s;
		}
		.cosmos-bannerOption-icon {
			stroke: #ffffff;
		}
		.cosmos-bannerOption-dropdownIcon {
			stroke: #ffffff;
			fill: #ffffff;
		}
	}
}
.cosmos-bannerOption-button {
	display: flex;
	padding: 5px 15px;
	align-items: center;
	height: 45px;
}
.cosmos-bannerOption-icon {
	display: inline-flex;
	align-items: center;
	justify-items: center;
	stroke: #bbbbbb;
	stroke-width: 2px;
	height: 45px;
	margin-top: 0;
	margin-bottom: 0;
	fill: none;
}
.cosmos-bannerOption-dropdownIcon {
	height: 15px;
	margin: 15px 0 15px 15px;
	display: inline-block;
	stroke: #bbbbbb;
	stroke-width: 2px;
	fill: #bbbbbb;
}
.cosmos-emptyListMessage {
	padding: 10px 10px 10px 15px;
	font-style: italic;
}
#cosmos-footerIcons-list {
	margin: 0 0 -15px 0;
}
.cosmos-footerIcons-listItem {
	display: inline-block;
	margin: 0 0 15px 15px;
}
/* ... */

